--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,8 +35,8 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   dio: ^5.7.0
-  flutter_bloc: ^8.1.6
   go_router: ^16.2.4
+  get: ^4.7.2
 
 dev_dependencies:
   flutter_test:
